WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78009
[Qt] Fetch the visible rect from LayerTreeHost instead of keeping a copy in each layer.
https://bugs.webkit.org/show_bug.cgi?id=78009
Summary
[Qt] Fetch the visible rect from LayerTreeHost instead of keeping a copy in e...
Jocelyn Turcotte
Reported
2012-02-07 11:39:30 PST
[Qt] Fetch the visible rect from LayerTreeHost instead of keeping a copy in each layer.
Attachments
Patch
(8.30 KB, patch)
2012-02-07 11:41 PST
,
Jocelyn Turcotte
noam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2012-02-07 11:41:10 PST
Created
attachment 125888
[details]
Patch
Noam Rosenthal
Comment 2
2012-02-07 15:55:05 PST
Comment on
attachment 125888
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=125888&action=review
LGTM with nitpicks
> Source/WebKit2/WebProcess/WebCoreSupport/WebGraphicsLayer.cpp:495 > + if (m_mainBackingStore && m_mainBackingStore->contentsScale() != scale) {
<nitpick> can be nicer with an early return.
> Source/WebKit2/WebProcess/WebPage/qt/LayerTreeHostQt.cpp:431 > + for (HashSet<WebCore::WebGraphicsLayer*>::iterator iter = m_registeredLayers.begin(); iter != end; ++iter) {
it instead of iter
Jocelyn Turcotte
Comment 3
2012-02-09 06:41:18 PST
Committed
r107237
: <
http://trac.webkit.org/changeset/107237
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug