[Qt] Fetch the visible rect from LayerTreeHost instead of keeping a copy in each layer. https://bugs.webkit.org/show_bug.cgi?id=78009

Reviewed by Noam Rosenthal.

Since WebGraphicsLayers are now accessed directly from LayerTreeHost, they don't
need to keep the visible rect to pass it down their child layers anymore.

* WebProcess/WebCoreSupport/WebGraphicsLayer.cpp:
(WebCore::WebGraphicsLayer::setContentsScale):
(WebCore::WebGraphicsLayer::tiledBackingStoreVisibleRect):
(WebCore::WebGraphicsLayer::adjustVisibleRect):
(WebCore):
* WebProcess/WebCoreSupport/WebGraphicsLayer.h:
(WebGraphicsLayerClient):
(WebGraphicsLayer):
* WebProcess/WebPage/qt/LayerTreeHostQt.cpp:
(WebKit::LayerTreeHostQt::registerLayer):
(WebKit::LayerTreeHostQt::visibleContentsRect):
(WebKit):
(WebKit::LayerTreeHostQt::setVisibleContentRectAndScale):
* WebProcess/WebPage/qt/LayerTreeHostQt.h:
(LayerTreeHostQt):

Canonical link: https://commits.webkit.org/95142@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107237 268f45cc-cd09-0410-ab3c-d52691b4dbfc