Source/WebKit2/WebProcess/WebCoreSupport/WebGraphicsLayer.h
@@ -52,6 +52,7 @@ public:
     virtual void updateTile(WebLayerID, int tileID, const UpdateInfo&) = 0;
     virtual void removeTile(WebLayerID, int tileID) = 0;
 
+    virtual WebCore::IntRect visibleContentsRect() const = 0;
     virtual bool layerTreeTileUpdatesAllowed() const = 0;
     virtual int64_t adoptImageBackingStore(WebCore::Image*) = 0;
     virtual void releaseImageBackingStore(int64_t) = 0;
@@ -102,7 +103,7 @@ public:
     void setNeedsDisplay();
     void setNeedsDisplayInRect(const FloatRect&);
     void setContentsNeedsDisplay();
-    void setVisibleContentRectAndScale(const IntRect&, float scale);
+    void setContentsScale(float);
     void setVisibleContentRectTrajectoryVector(const FloatPoint&);
     virtual void syncCompositingState(const FloatRect&);
     virtual void syncCompositingStateForThisLayerOnly();
@@ -137,6 +138,7 @@ public:
 
     void setWebGraphicsLayerClient(WebKit::WebGraphicsLayerClient*);
 
+    void adjustVisibleRect();
     bool isReadyForTileBufferSwap() const;
     void updateContentBuffers();
     void purgeBackingStores();
@@ -147,7 +149,6 @@ private:
     RefPtr<Image> m_image;
     GraphicsLayer* m_maskTarget;
     FloatRect m_needsDisplayRect;
-    IntRect m_pageVisibleRect;
     LayerTransform m_layerTransform;
     bool m_needsDisplay : 1;
     bool m_modified : 1;
